--- a/_config.yml
+++ b/_config.yml
@@ -3,17 +3,17 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
+title: 夸克夸克
 subtitle: ''
 description: ''
-keywords:
-author: John Doe
-language: en
+keywords: '夸克夸克 huangzilong'
+author: huangzilong
+language: zh
 timezone: ''
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://yoursite.com
+url: https://huangzilong.com
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
