enable dark mode

--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ subtitle: ''
 description: ''
 keywords: '夸克夸克 huangzilong'
 author: huangzilong
-language: zh-CN 
+language: zh-Hans
 timezone: ''
 
 # URL
