--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -117,7 +117,7 @@ darkmode: true
 menu:
   home: / || fa fa-home
   #about: /about/ || fa fa-user
-  #tags: /tags/ || fa fa-tags
+  tags: /tags/ || fa fa-tags
   #categories: /categories/ || fa fa-th
   archives: /archives/ || fa fa-archive
   #schedule: /schedule/ || fa fa-calendar
@@ -190,17 +190,18 @@ social:
 social_icons:
   enable: true
   icons_only: false
-  transition: false
+  transition: true
 
 # Blog rolls
 links_settings:
   icon: fa fa-link
-  title: Links
+  title: 经常写博客的家伙
   # Available values: block | inline
   layout: block
 
 links:
-  #Title: http://yoursite.com
+  liriansu: https://liriansu.com/
+  wzmmmmj: https://wzmmmmj.com/
 
 # Table of Contents in the Sidebar
 # Front-matter variable (unsupport wrap expand_all).
@@ -388,10 +389,9 @@ bookmark:
 
 # `Follow me on GitHub` banner in the top-right corner.
 github_banner:
-  enable: false
-  permalink: https://github.com/yourname
-  title: Follow me on GitHub
-
+  enable: true
+  permalink: https://github.com/huagnzilong
+  title: GitHub
 
 # ---------------------------------------------------------------
 # Font Settings
@@ -997,4 +997,3 @@ images: images
 
 # RSS订阅
 rss: /atom.xml
-
