cactus: 修改下模板

--- a/themes/cactus/_config.yml
+++ b/themes/cactus/_config.yml
@@ -18,6 +18,8 @@ nav:
   articles: /archives/
   about: /about/
   rss: /atom.xml
+  Projects: URL
+  LINK_NAME: URL
   # projects: projects_url
 
 
